compiler/src/generated/TypetonParser.ts
// Generated from ../grammar/Typeton.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { TypetonListener } from "./TypetonListener";
import { TypetonVisitor } from "./TypetonVisitor";


export class TypetonParser extends Parser {
	public static readonly VAR = 1;
	public static readonly CONST = 2;
	public static readonly STRUCT = 3;
	public static readonly PRINT = 4;
	public static readonly FOR = 5;
	public static readonly WHILE = 6;
	public static readonly IF = 7;
	public static readonly ELSE = 8;
	public static readonly RETURN = 9;
	public static readonly BREAK = 10;
	public static readonly CONTINUE = 11;
	public static readonly TYPE_INT32 = 12;
	public static readonly TYPE_INT16 = 13;
	public static readonly TYPE_INT8 = 14;
	public static readonly TYPE_UINT32 = 15;
	public static readonly TYPE_UINT16 = 16;
	public static readonly TYPE_UINT8 = 17;
	public static readonly TYPE_FLOAT = 18;
	public static readonly TYPE_BOOL = 19;
	public static readonly TYPE_VOID = 20;
	public static readonly PLUS = 21;
	public static readonly MINUS = 22;
	public static readonly MULT = 23;
	public static readonly MOD = 24;
	public static readonly DIV = 25;
	public static readonly ASSIGN = 26;
	public static readonly PLUS_ASSIGN = 27;
	public static readonly MINUS_ASSIGN = 28;
	public static readonly MULT_ASSIGN = 29;
	public static readonly DIV_ASSIGN = 30;
	public static readonly MOD_ASSIGN = 31;
	public static readonly PLUSPLUS = 32;
	public static readonly MINUSMINUS = 33;
	public static readonly LESS_EQUAL = 34;
	public static readonly GREAT_EQUAL = 35;
	public static readonly EQUAL = 36;
	public static readonly NOT_EQUAL = 37;
	public static readonly LESS_THAN = 38;
	public static readonly GREAT_THAN = 39;
	public static readonly LOGICAL_AND = 40;
	public static readonly LOGICAL_OR = 41;
	public static readonly AMPERSAND = 42;
	public static readonly NOT = 43;
	public static readonly ABS = 44;
	public static readonly SQRT = 45;
	public static readonly ATAN2 = 46;
	public static readonly SIN = 47;
	public static readonly COS = 48;
	public static readonly TAN = 49;
	public static readonly FLOOR = 50;
	public static readonly CEIL = 51;
	public static readonly ROUND = 52;
	public static readonly MIN = 53;
	public static readonly MAX = 54;
	public static readonly CLAMP = 55;
	public static readonly LPAREN = 56;
	public static readonly RPAREN = 57;
	public static readonly LBRACKET = 58;
	public static readonly RBRACKET = 59;
	public static readonly LBRACE = 60;
	public static readonly RBRACE = 61;
	public static readonly COLON = 62;
	public static readonly SEMICOLON = 63;
	public static readonly COMMA = 64;
	public static readonly DOT = 65;
	public static readonly ARROW = 66;
	public static readonly ENCODER_KEYWORD = 67;
	public static readonly ID = 68;
	public static readonly INT_LIT = 69;
	public static readonly FLOAT_LIT = 70;
	public static readonly STRING_LIT = 71;
	public static readonly WS = 72;
	public static readonly COMMENT = 73;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_forStmt = 2;
	public static readonly RULE_forInit = 3;
	public static readonly RULE_forVarDecl = 4;
	public static readonly RULE_whileStmt = 5;
	public static readonly RULE_ifStmt = 6;
	public static readonly RULE_block = 7;
	public static readonly RULE_varDecl = 8;
	public static readonly RULE_constDecl = 9;
	public static readonly RULE_assignment = 10;
	public static readonly RULE_simpleAssignment = 11;
	public static readonly RULE_printStmt = 12;
	public static readonly RULE_arrayLiteral = 13;
	public static readonly RULE_argumentList = 14;
	public static readonly RULE_qualifiedName = 15;
	public static readonly RULE_callableName = 16;
	public static readonly RULE_methodCall = 17;
	public static readonly RULE_structFieldAccess = 18;
	public static readonly RULE_returnStmt = 19;
	public static readonly RULE_breakStmt = 20;
	public static readonly RULE_continueStmt = 21;
	public static readonly RULE_functionExpr = 22;
	public static readonly RULE_parameterList = 23;
	public static readonly RULE_parameter = 24;
	public static readonly RULE_type = 25;
	public static readonly RULE_returnType = 26;
	public static readonly RULE_expression = 27;
	public static readonly RULE_atom = 28;
	public static readonly RULE_structDecl = 29;
	public static readonly RULE_structField = 30;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "forStmt", "forInit", "forVarDecl", "whileStmt", 
		"ifStmt", "block", "varDecl", "constDecl", "assignment", "simpleAssignment", 
		"printStmt", "arrayLiteral", "argumentList", "qualifiedName", "callableName", 
		"methodCall", "structFieldAccess", "returnStmt", "breakStmt", "continueStmt", 
		"functionExpr", "parameterList", "parameter", "type", "returnType", "expression", 
		"atom", "structDecl", "structField",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'var'", "'const'", "'struct'", "'print'", "'for'", "'while'", 
		"'if'", "'else'", "'return'", "'break'", "'continue'", "'Int32'", "'Int16'", 
		"'Int8'", "'UInt32'", "'UInt16'", "'UInt8'", "'Float'", "'Bool'", "'void'", 
		"'+'", "'-'", "'*'", "'%'", "'/'", "'='", "'+='", "'-='", "'*='", "'/='", 
		"'%='", "'++'", "'--'", "'<='", "'>='", "'=='", "'!='", "'<'", "'>'", 
		"'&&'", "'||'", "'&'", "'!'", undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "';'", "','", 
		"'.'", "'=>'", "'Encoder'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "VAR", "CONST", "STRUCT", "PRINT", "FOR", "WHILE", "IF", "ELSE", 
		"RETURN", "BREAK", "CONTINUE", "TYPE_INT32", "TYPE_INT16", "TYPE_INT8", 
		"TYPE_UINT32", "TYPE_UINT16", "TYPE_UINT8", "TYPE_FLOAT", "TYPE_BOOL", 
		"TYPE_VOID", "PLUS", "MINUS", "MULT", "MOD", "DIV", "ASSIGN", "PLUS_ASSIGN", 
		"MINUS_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "PLUSPLUS", 
		"MINUSMINUS", "LESS_EQUAL", "GREAT_EQUAL", "EQUAL", "NOT_EQUAL", "LESS_THAN", 
		"GREAT_THAN", "LOGICAL_AND", "LOGICAL_OR", "AMPERSAND", "NOT", "ABS", 
		"SQRT", "ATAN2", "SIN", "COS", "TAN", "FLOOR", "CEIL", "ROUND", "MIN", 
		"MAX", "CLAMP", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", 
		"RBRACE", "COLON", "SEMICOLON", "COMMA", "DOT", "ARROW", "ENCODER_KEYWORD", 
		"ID", "INT_LIT", "FLOAT_LIT", "STRING_LIT", "WS", "COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(TypetonParser._LITERAL_NAMES, TypetonParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return TypetonParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Typeton.g4"; }

	// @Override
	public get ruleNames(): string[] { return TypetonParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return TypetonParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(TypetonParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, TypetonParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TypetonParser.VAR) | (1 << TypetonParser.CONST) | (1 << TypetonParser.STRUCT) | (1 << TypetonParser.PRINT) | (1 << TypetonParser.FOR) | (1 << TypetonParser.WHILE) | (1 << TypetonParser.IF) | (1 << TypetonParser.RETURN) | (1 << TypetonParser.BREAK) | (1 << TypetonParser.CONTINUE))) !== 0) || _la === TypetonParser.LBRACE || _la === TypetonParser.ID) {
				{
				{
				this.state = 62;
				this.statement();
				}
				}
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 68;
			this.match(TypetonParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, TypetonParser.RULE_statement);
		try {
			this.state = 85;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 70;
				this.structDecl();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 71;
				this.varDecl();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 72;
				this.constDecl();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 73;
				this.assignment();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 74;
				this.printStmt();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 75;
				this.forStmt();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 76;
				this.whileStmt();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 77;
				this.ifStmt();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 78;
				this.breakStmt();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 79;
				this.continueStmt();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 80;
				this.block();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 81;
				this.methodCall();
				this.state = 82;
				this.match(TypetonParser.SEMICOLON);
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 84;
				this.returnStmt();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forStmt(): ForStmtContext {
		let _localctx: ForStmtContext = new ForStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, TypetonParser.RULE_forStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this.match(TypetonParser.FOR);
			this.state = 88;
			this.match(TypetonParser.LPAREN);
			this.state = 89;
			this.forInit();
			this.state = 90;
			this.match(TypetonParser.SEMICOLON);
			this.state = 91;
			this.expression(0);
			this.state = 92;
			this.match(TypetonParser.SEMICOLON);
			this.state = 93;
			this.simpleAssignment();
			this.state = 94;
			this.match(TypetonParser.RPAREN);
			this.state = 95;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forInit(): ForInitContext {
		let _localctx: ForInitContext = new ForInitContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, TypetonParser.RULE_forInit);
		try {
			this.state = 99;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case TypetonParser.ID:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 97;
				this.simpleAssignment();
				}
				break;
			case TypetonParser.VAR:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 98;
				this.forVarDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forVarDecl(): ForVarDeclContext {
		let _localctx: ForVarDeclContext = new ForVarDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, TypetonParser.RULE_forVarDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 101;
			this.match(TypetonParser.VAR);
			this.state = 102;
			this.match(TypetonParser.ID);
			this.state = 103;
			this.match(TypetonParser.COLON);
			this.state = 104;
			this.type();
			this.state = 105;
			this.match(TypetonParser.ASSIGN);
			this.state = 106;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileStmt(): WhileStmtContext {
		let _localctx: WhileStmtContext = new WhileStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, TypetonParser.RULE_whileStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(TypetonParser.WHILE);
			this.state = 109;
			this.match(TypetonParser.LPAREN);
			this.state = 110;
			this.expression(0);
			this.state = 111;
			this.match(TypetonParser.RPAREN);
			this.state = 112;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStmt(): IfStmtContext {
		let _localctx: IfStmtContext = new IfStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, TypetonParser.RULE_ifStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this.match(TypetonParser.IF);
			this.state = 115;
			this.match(TypetonParser.LPAREN);
			this.state = 116;
			this.expression(0);
			this.state = 117;
			this.match(TypetonParser.RPAREN);
			this.state = 118;
			this.statement();
			this.state = 121;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 119;
				this.match(TypetonParser.ELSE);
				this.state = 120;
				this.statement();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, TypetonParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(TypetonParser.LBRACE);
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << TypetonParser.VAR) | (1 << TypetonParser.CONST) | (1 << TypetonParser.STRUCT) | (1 << TypetonParser.PRINT) | (1 << TypetonParser.FOR) | (1 << TypetonParser.WHILE) | (1 << TypetonParser.IF) | (1 << TypetonParser.RETURN) | (1 << TypetonParser.BREAK) | (1 << TypetonParser.CONTINUE))) !== 0) || _la === TypetonParser.LBRACE || _la === TypetonParser.ID) {
				{
				{
				this.state = 124;
				this.statement();
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 130;
			this.match(TypetonParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varDecl(): VarDeclContext {
		let _localctx: VarDeclContext = new VarDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, TypetonParser.RULE_varDecl);
		try {
			this.state = 166;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				_localctx = new ScalarVarDeclContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 132;
				this.match(TypetonParser.VAR);
				this.state = 133;
				this.match(TypetonParser.ID);
				this.state = 134;
				this.match(TypetonParser.COLON);
				this.state = 135;
				this.type();
				this.state = 136;
				this.match(TypetonParser.ASSIGN);
				this.state = 137;
				this.expression(0);
				this.state = 138;
				this.match(TypetonParser.SEMICOLON);
				}
				break;

			case 2:
				_localctx = new ScalarVarDeclNoInitContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 140;
				this.match(TypetonParser.VAR);
				this.state = 141;
				this.match(TypetonParser.ID);
				this.state = 142;
				this.match(TypetonParser.COLON);
				this.state = 143;
				this.type();
				this.state = 144;
				this.match(TypetonParser.SEMICOLON);
				}
				break;

			case 3:
				_localctx = new ArrayVarDeclContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 146;
				this.match(TypetonParser.VAR);
				this.state = 147;
				this.match(TypetonParser.ID);
				this.state = 148;
				this.match(TypetonParser.COLON);
				this.state = 149;
				this.type();
				this.state = 150;
				this.match(TypetonParser.LBRACKET);
				this.state = 151;
				this.match(TypetonParser.INT_LIT);
				this.state = 152;
				this.match(TypetonParser.RBRACKET);
				this.state = 153;
				this.match(TypetonParser.SEMICOLON);
				}
				break;

			case 4:
				_localctx = new ArrayVarDeclInitContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 155;
				this.match(TypetonParser.VAR);
				this.state = 156;
				this.match(TypetonParser.ID);
				this.state = 157;
				this.match(TypetonParser.COLON);
				this.state = 158;
				this.type();
				this.state = 159;
				this.match(TypetonParser.LBRACKET);
				this.state = 160;
				this.match(TypetonParser.INT_LIT);
				this.state = 161;
				this.match(TypetonParser.RBRACKET);
				this.state = 162;
				this.match(TypetonParser.ASSIGN);
				this.state = 163;
				this.arrayLiteral();
				this.state = 164;
				this.match(TypetonParser.SEMICOLON);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constDecl(): ConstDeclContext {
		let _localctx: ConstDeclContext = new ConstDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, TypetonParser.RULE_constDecl);
		try {
			this.state = 182;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 168;
				this.match(TypetonParser.CONST);
				this.state = 169;
				this.match(TypetonParser.ID);
				this.state = 170;
				this.match(TypetonParser.ASSIGN);
				this.state = 171;
				this.functionExpr();
				this.state = 172;
				this.match(TypetonParser.SEMICOLON);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 174;
				this.match(TypetonParser.CONST);
				this.state = 175;
				this.match(TypetonParser.ID);
				this.state = 176;
				this.match(TypetonParser.COLON);
				this.state = 177;
				this.type();
				this.state = 178;
				this.match(TypetonParser.ASSIGN);
				this.state = 179;
				this.expression(0);
				this.state = 180;
				this.match(TypetonParser.SEMICOLON);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignment(): AssignmentContext {
		let _localctx: AssignmentContext = new AssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, TypetonParser.RULE_assignment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 184;
			this.simpleAssignment();
			this.state = 185;
			this.match(TypetonParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public simpleAssignment(): SimpleAssignmentContext {
		let _localctx: SimpleAssignmentContext = new SimpleAssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, TypetonParser.RULE_simpleAssignment);
		try {
			this.state = 220;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				_localctx = new ScalarAssignmentContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 187;
				this.match(TypetonParser.ID);
				this.state = 188;
				this.match(TypetonParser.ASSIGN);
				this.state = 189;
				this.expression(0);
				}
				break;

			case 2:
				_localctx = new CompoundAssignmentContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 190;
				this.match(TypetonParser.ID);
				this.state = 191;
				this.match(TypetonParser.PLUS_ASSIGN);
				this.state = 192;
				this.expression(0);
				}
				break;
